# pmfd-hs

./: .gitignore  README.md
src/: DehnAlgorithm.hs  LICENSE  PolygonScheme.hs  SimplicialComplex.hs  Surface.hs  TwoDimManifold.hs  TwoDimPseudoManifold.hs  Util.hs  pmfd-hs.cabal
src/SimplicialComplex/: Generator.hs
src/TwoDimPseudoManifold/: GluingGraph.hs  GraphViz.hs  Loop.hs
